# ws_d1-catch

./: .gitignore  README.md  pyrealsense2.cpython-38-aarch64-linux-gnu.so.2.45
.catkin_tools/profiles/default/: devel_collisions.txt
devel/: .catkin  .rosinstall  local_setup.sh
devel/include/moveit/: version.h
devel/lib/: libchomp_motion_planner.so.1.1.16  libchomp_planner_plugin.so.1.1.16  libcollision_detector_bullet_plugin.so.1.1.16  libcollision_detector_fcl_plugin.so.1.1.16  libgeometric_shapes.so.0.7.7  libmoveit_background_processing.so.1.1.16  libmoveit_cached_ik_kinematics_base.so.1.1.16  libmoveit_cached_ik_kinematics_plugin.so.1.1.16  libmoveit_chomp_optimizer_adapter.so.1.1.16  libmoveit_collision_detection.so.1.1.16  libmoveit_collision_detection_bullet.so.1.1.16  libmoveit_collision_detection_fcl.so.1.1.16  libmoveit_collision_distance_field.so.1.1.16  libmoveit_collision_plugin_loader.so.1.1.16  libmoveit_common_planning_interface_objects.so.1.1.16  libmoveit_constraint_sampler_manager_loader.so.1.1.16  libmoveit_constraint_samplers.so.1.1.16  libmoveit_cpp.so.1.1.16  libmoveit_default_planning_request_adapter_plugins.so.1.1.16  libmoveit_depth_image_octomap_updater.so.1.1.16  libmoveit_depth_image_octomap_updater_core.so.1.1.16  libmoveit_depth_self_filter.so.1.1.16  libmoveit_distance_field.so.1.1.16  libmoveit_dynamics_solver.so.1.1.16  libmoveit_exceptions.so.1.1.16  libmoveit_fake_controller_manager.so.1.1.16  libmoveit_kdl_kinematics_plugin.so.1.1.16  libmoveit_kinematic_constraints.so.1.1.16  libmoveit_kinematics_base.so.1.1.16  libmoveit_kinematics_metrics.so.1.1.16  libmoveit_kinematics_plugin_loader.so.1.1.16  libmoveit_lazy_free_space_updater.so.1.1.16  libmoveit_lerp_planner_plugin.so.0.1.0  libmoveit_lma_kinematics_plugin.so.1.1.16  libmoveit_mesh_filter.so.1.1.16  libmoveit_motion_planning_rviz_plugin.so.1.1.16  libmoveit_motion_planning_rviz_plugin_core.so.1.1.16  libmoveit_move_group_capabilities_base.so.1.1.16  libmoveit_move_group_default_capabilities.so.1.1.16  libmoveit_move_group_interface.so.1.1.16  (+52 more)
devel/lib/control_robot/: demo_node
devel/lib/d1_sdk/: arm_zero_control  get_arm_joint_angle  joint_angle_control  joint_enable_control  joint_state_subscriber  multiple_joint_angle_control
devel/lib/easy_handeye/: handeye_calibration_commander.py  publish.py  robot.py
devel/lib/moveit_commander/: moveit_commander_cmdline.py
devel/lib/moveit_core/: moveit_version  robot_state_benchmark
devel/lib/moveit_kinematics/: benchmark_ik  create_ikfast_moveit_plugin.py  round_collada_numbers.py  test_kinematics_plugin
devel/lib/moveit_planners_ompl/: generate_state_database
devel/lib/moveit_ros_benchmarks/: moveit_combine_predefined_poses_benchmark  moveit_run_benchmark
devel/lib/moveit_ros_move_group/: list_move_group_capabilities  move_group
devel/lib/moveit_ros_occupancy_map_monitor/: moveit_ros_occupancy_map_server
devel/lib/moveit_ros_planning/: demo_scene  moveit_compare_collision_checking_speed_fcl_bullet  moveit_display_random_state  moveit_evaluate_collision_checking_speed  moveit_evaluate_state_operations_speed  moveit_kinematics_speed_and_validity_evaluator  moveit_list_request_adapter_plugins  moveit_print_planning_model_info  moveit_print_planning_scene_info  moveit_publish_scene_from_text  moveit_visualize_robot_collision_volume
devel/lib/moveit_ros_planning_interface/: demo  test_cleanup
src/: .rosinstall  .rosinstall.bak
src/camera_data/: CMakeLists.txt
src/camera_data/src/: detect.py
src/control_robot/: CMakeLists.txt
src/control_robot/src/: demo1.cpp
src/d1_config/: .setup_assistant  CMakeLists.txt
src/d1_config2/: .setup_assistant  CMakeLists.txt
src/d1_config3/: .setup_assistant  CMakeLists.txt
src/d1_sdk/: CMakeLists.txt  README.md  trans.py
src/d1_sdk/src/: get_arm_joint_angle.cpp  joint_angle_control.cpp  joint_state_subscriber.cpp  multiple_joint_angle_control.cpp  multiple_joint_angle_control_policy1.cpp
src/launch/: CMakeLists.txt  full_demo.launch  package.xml
src/launch/scripts/: sleep_node.py
(+213 files in other folders)
