<?xml version="1.0"?>
<package format="2">
  <name>launch</name>
  <version>0.0.1</version>
  <description>Launch files for controlling the robot</description>

  <maintainer email="user@example.com">Your Name</maintainer>

  <license>MIT</license>

  <!-- ROS 核心依赖 -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- 依赖的包 -->
  <depend>rospy</depend> 
  <depend>std_msgs</depend> 
  <depend>d1_config</depend>
  <depend>d1_sdk</depend>
  <depend>camera_data</depend>
  <depend>control_robot</depend>

  <export>
  </export>
</package>
